# mini-mbm

./: CMakeLists.txt  LICENSE.md  README.md
editor/: asset_packager.lua  editor_utils.lua  font_maker.lua  particle_editor.lua  physic_editor.lua  scene_editor2d.lua  shader_editor.lua  sprite_maker.lua  texture_packer.lua  tilemap_editor.lua
editor/shaders/: shader_cfg.lua
include/core_mbm/: animation.h  audio-interface.h  audio.h  blend.h  camera.h  class-identifier.h  core-exports.h  core-manager.h  cr-static-local.h  deprecated.h  device.h  dynamic-var.h  file-util.h  frustum.h  gles-debug.h  header-mesh.h  image-resource.h  log-util.h  mesh-manager.h  order-render.h  physics.h  plugin-callback.h  primitives.h  renderizable-clone.h  renderizable.h  scene.h  shader-cfg.h  shader-fx.h  shader-resource.h  shader-var-cfg.h  shader.h  shapes.h  texture-manager.h  time-control.h  uber-image.h  util-interface.h  util.h  vigenere.h
include/joystick-win32/: joystick.cpp  joystick.h
include/lua-interface/lua-wrap/: audio-lua.h  camera-lua.h  check-user-type-lua.h  common-methods-lua.h  current-scene-lua.h  framework-lua.h  launcher-lua.h  manager-lua.h  shader-lua.h  timer-lua.h  user-data-lua.h  vec2-lua.h  vec3-lua.h
include/lua-interface/lua-wrap/render-table/: animation-lua.h  background-lua.h  (+13 more)
include/miniz-wrap/: miniz-wrap.h
include/platform/: common-jni.h  mismatch-platform.h  usage-help.h
include/plusWindows/: defaultThemePlusWindows.cpp  defaultThemePlusWindows.h  plusWindows.cpp  plusWindows.h
include/render/: HMD.h  background.h  font.h  gif-view.h  line-mesh.h  mesh.h  particle.h  render-2-texture.h  shape-mesh.h  sprite.h  steered_particle.h  texture-view.h  tile.h
include/static-resource/: hourglass-resource.h  mini-mbm-logo.h
include/version/: version.h
modules/: CMakeLists.txt  test.lua
modules/obj_importer_lua/: CMakeLists.txt  OBJ_Loader.h  obj_importer_lua.cpp  obj_importer_lua.h
platform-android/: AndroidManifest.xml  leia-me.txt  main-lua.cpp  main.cpp  read-me.txt  scene-1.cpp  scene-1.h
platform-linux/: .clang-tidy.sh  main-lua.cpp  main.cpp  makefile_old_style.make  my-scene.cpp  my-scene.h
platform-msvs/: copy-dlls.bat  mini-mbm.sln
platform-msvs/box2d/: box2d.vcxproj  box2d.vcxproj.filters  dllmain-box-2d.cpp
platform-msvs/bullet2.8/: bullet2.8.vcxproj  bullet2.8.vcxproj.filters  bullet3d-dllmain.cpp
platform-msvs/core_mbm/: core_mbm.cpp  core_mbm.vcxproj  core_mbm.vcxproj.filters
platform-msvs/imGui/: ImGui-dllmain.cpp  imGui.vcxproj  imGui.vcxproj.filters
platform-msvs/libTest/: libTest.rc  libTest.vcxproj  libTest.vcxproj.filters  resource.h
platform-msvs/lsqlite3/: lsqlite3-dllmain.cpp  lsqlite3.vcxproj  lsqlite3.vcxproj.filters
platform-msvs/lua5.4/: lua5.4.vcxproj  lua5.4.vcxproj.filters
platform-msvs/mini-mbm/: create-short-cuts.bat  create_shortcut_from_here.bat  main.cpp  mini-mbm.rc  mini-mbm.vcxproj  mini-mbm.vcxproj.filters  resource.h
platform-msvs/mini-mbm-launcher/: mini-mbm-launcher.cpp  mini-mbm-launcher.rc  mini-mbm-launcher.vcxproj  mini-mbm-launcher.vcxproj.filters  mini-mbm-lib.h  parse_laucher_args.cpp  parse_laucher_args.hpp  resource.h
platform-msvs/mini-mbm-lib/: dllmain-mini-mbm-lib.cpp  mini-mbm-lib.vcxproj  mini-mbm-lib.vcxproj.filters
platform-msvs/tilemap/: tilemap-dllmain.cpp  tilemap.vcxproj  tilemap.vcxproj.filters
platform-msvs/tiny-obj-loader/: dllmain.cpp  tiny-obj-loader.vcxproj  tiny-obj-loader.vcxproj.filters
plugins/box2d/: CMakeLists.txt  box-2d-wrap.cpp  box-2d-wrap.h  box2d-lua.cpp  box2d-lua.h  physics-box-2d-fluid-lua.cpp  physics-box-2d-fluid-lua.h  physics-box-2d-joint-lua.h  physics-box-2d-lua.cpp  physics-box-2d-lua.h  physics-box2d-joint-lua.cpp
plugins/bullet3d/: CMakeLists.txt  bullet-3d-lua.cpp  bullet-3d-lua.h  physics-bullet-3d-lua.cpp  physics-bullet-3d-lua.h  physics-bullet-3d-wrap.cpp  physics-bullet-3d-wrap.h  shape-info-bullet-3d.cpp  shape-info-bullet-3d.h
plugins/imGui/: CMakeLists.txt  imgui-ext.cpp  imgui-lua.cpp  imgui-lua.h  imgui.cpp  imgui.h  imgui_widgets.cpp  updateIMGUI.sh
plugins/plugin-helper/: plugin-helper.cpp  plugin-helper.h
plugins/tiled/: CMakeLists.txt  brick.cpp  brick.h  layer.cpp  layer.h  tile_editor.cpp  tile_editor.hpp  tile_set.cpp  tile_set.h  tiled-lua.cpp  tiled-lua.h  tiled_map.cpp  tiled_map.h  util_tiled.cpp  util_tiled.h
src/: CMakeLists.txt
src/cmake-modules/: FindOpenGLES2.cmake  FindReadline.cmake  Findndk-stl.cmake
src/core_mbm/: CMakeLists.txt  animation.cpp  audio-audiere.cpp  audio-direct-sound.cpp  audio-interface.cpp  audio-jni-android.cpp  audio-manager.cpp  audio-none.cpp  audio-portaudio.cpp  blend.cpp  camera.cpp  class-identifier.cpp  core-manager.cpp  deprecated.cpp  device.cpp  dynamic-var.cpp  file-util.cpp  frustum.cpp  gles-debug.cpp  header-mesh.cpp  image-resource.cpp  log-util.cpp  mesh-manager.cpp  order-render.cpp  physics.cpp  primitives.cpp  renderizable.cpp  scene.cpp  shader-cfg.cpp  shader-fx.cpp  shader-var-cfg.cpp  shader.cpp  shapes.cpp  texture-manager.cpp  time-control.cpp  uber-image.cpp  util.cpp  vigenere.cpp
src/core_mbm/miniz/: miniz-wrap.cpp
src/core_mbm/platform/: common-jni.cpp
src/lua-wrap/: audio-lua.cpp  camera-lua.cpp  check-user-type-lua.cpp  common-methods-lua.cpp  current-scene-lua.cpp  framework-lua.cpp  manager-lua.cpp  shader-lua.cpp  timer-lua.cpp  user-data-lua.cpp  vec2-lua.cpp  vec3-lua.cpp
src/lua-wrap/render-table/: animation-lua.cpp  background-lua.cpp  font-lua.cpp  gif-view-lua.cpp  line-mesh-lua.cpp  mesh-debug-lua.cpp  mesh-lua.cpp  no-gc-renderizable-lua.cpp  particle-lua.cpp  render-2-texture-lua.cpp  shape-lua.cpp  sprite-lua.cpp  texture-view-lua.cpp  tile-lua.cpp  vr-lua.cpp
src/mini-mbm-lib/: mini-mbm-lib.cpp  mini-mbm-lib.h
src/render/: HMD.cpp  background.cpp  font.cpp  gif-view.cpp  line-mesh.cpp  mesh.cpp  particle.cpp  render-2-texture.cpp  renderizable-clone.cpp  shape-mesh.cpp  sprite.cpp  steered_particle.cpp  texture-view.cpp  tile.cpp
src/test-lib/: CMakeLists.txt  main.cpp  my-scene-test.cpp  my-scene-test.h
(+14 files in other folders)
